# librobo

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  a.txt  bindgen.ps1  bindgen.sh  flake.nix  gen-motor_driver-cytron.sh  gen-motor_driver-pwm.sh  git-hooks.nix  memory.x  pwm-f303d.txt  pwm-f407.txt  rust-toolchain.toml  rustfmt.toml  treefmt.nix
.github/workflows/: rust.yml
_sources/: generated.json  generated.nix
bindings/c/include/robo/: controller.h  encoder.h  servo.h  steering.h
bindings/c/include/robo/steering/: crawler.h  quad_mechanum.h  quad_omni.h
bindings/cxx/include/robo/: controller.hh  encoder.hh  servo.hh  steering.hh
bindings/cxx/include/robo/steering/: crawler.hh  quad_mechanum.hh  quad_omni.hh
docs/: index.html
librobo/: Cargo.toml
librobo-common/: Cargo.toml
librobo-common/src/: controller.rs  encoder.rs  lib.rs  motor_driver.rs  sbdbt.rs  steering.rs
librobo-common/src/steering/: crawler.rs  quad_omni.rs
librobo-compat/: Cargo.toml
librobo-compat/src/: esp32_ds4_driver.rs  lib.rs
librobo-macro/: Cargo.toml
librobo-macro/src/: lib.rs
librobo-nostd/: Cargo.toml
librobo-nostd-macro/: Cargo.toml
librobo-nostd-macro/src/: lib.rs
librobo-nostd/src/: controller.rs  encoder.rs  lib.rs  math.rs  steering.rs
librobo-nostd/src/encoder/: ffi.rs
librobo-nostd/src/servo/: ffi.rs
librobo-nostd/src/steering/: crawler.rs  quad_mechanum.rs  quad_omni.rs
librobo/src/: controller.rs  encoder.rs  lib.rs  math.rs  servo.rs  steering.rs  util.rs
librobo/src/controller/: ffi.rs
librobo/src/encoder/: ffi.rs
librobo/src/servo/: ffi.rs
librobo/src/steering/: crawler.rs  ffi.rs  quad_mechanum.rs  quad_omni.rs
librobo/src/steering/crawler/: ffi.rs
librobo/src/steering/quad_mechanum/: ffi.rs
librobo/src/steering/quad_omni/: ffi.rs
librobo/src/util/: vec.rs
librobof303d/: Cargo.toml
librobof303d/src/: lib.rs
librobof303d/src/motor_driver/: cytron.rs  pwm.rs
librobof407/: Cargo.toml
librobof407/src/: lib.rs
librobof407/src/motor_driver/: pwm.rs
src/: lib.rs
