[dependencies.esp32-ds4-driver]
git = "https://github.com/ms0503/ESP32-DS4-driver.git"
optional = true

[dependencies.librobo]
default-features = false
path = "../librobo"

[features]
all = [
    "dep:esp32-ds4-driver"
]
all-alloc = [
    "dep:esp32-ds4-driver",
    "alloc"
]
all-std = [
    "dep:esp32-ds4-driver",
    "std"
]
alloc = [
    "librobo/alloc"
]
default = [
    "librobo/default"
]
std = [
    "librobo/std"
]

[lib]
name = "robo_compat"

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2021"
name = "librobo-compat"
readme = "../README.md"
version = "0.1.1"
