[dependencies]
heapless = "0.8"
num = { default-features = false, features = ["libm"], version = "0.4" }

[features]
bind-c = []
default = [
    "bind-c"
]

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib"
]

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2021"
name = "librobo-nostd"
readme = "../README.md"
version = "0.1.0"
