[dependencies]
heapless = "0.8"
log = { default-features = false, version = "0.4" }
num = { default-features = false, features = ["libm"], version = "0.4" }

[features]
bind-c = []
controller = [
    "librobo-nostd-macro/controller"
]
default = [
    "controller",
    "encoder"
]
encoder = []

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib"
]
name = "robo"

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2021"
name = "librobo-nostd"
readme = "../README.md"
version = "0.1.0"
