[dependencies]
heapless = "0.8"
librobo-nostd-macro = { path = "../librobo-nostd-macro" }
log = { default-features = false, version = "0.4" }
num = { default-features = false, features = ["libm"], version = "0.4" }

[features]
bind-c = []
controller = [
    "librobo-nostd-macro/controller"
]
default = [
    "controller",
    "encoder",
    "steering"
]
encoder = []
steering = []
steering-crawler = [
    "steering"
]
steering-quad-mechanum = [
    "steering"
]
steering-quad-omni = [
    "steering"
]

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib"
]
name = "robo_nostd"

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2021"
name = "librobo-nostd"
readme = "../README.md"
version = "0.1.0"
