[dependencies.heapless]
default-features = false
version = "0.8"

[dependencies.librobo-macro]
default-features = false
path = "../librobo-macro"

[dependencies.num]
default-features = false
version = "0.4"

[features]
all = [
    "bind-c",
    "controller",
    "encoder",
    "num/libm",
    "servo",
    "steering",
    "steering-crawler",
    "steering-quad-mechanum",
    "steering-quad-omni"
]
all-std = [
    "bind-c",
    "controller",
    "encoder",
    "servo",
    "std",
    "steering",
    "steering-crawler",
    "steering-quad-mechanum",
    "steering-quad-omni"
]
bind-c = []
controller = [
    "librobo-macro/controller"
]
default = [
    "num/libm"
]
encoder = []
servo = []
std = [
    "librobo-macro/std",
    "num/std"
]
steering = []
steering-crawler = [
    "steering"
]
steering-quad-mechanum = [
    "steering"
]
steering-quad-omni = [
    "steering"
]

[lib]
crate-type = [
    "cdylib",
    "rlib",
    "staticlib"
]
name = "robo"

[package]
authors = [
    "Sora Tonami <ms0503@outlook.com>"
]
edition = "2021"
name = "librobo"
readme = "../README.md"
version = "0.2.0"
