[dependencies.heapless]
default-features = false
optional = true
version = "0.8"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.num]
default-features = false
version = "0.4"

[dependencies.panic-abort]
optional = true
version = "0.3"

[[example]]
crate-type = ["staticlib"]
name = "robo"
path = "src/lib.rs"

[features]
all = [
  "controller",
  "encoder",
  "heapless",
  "num/libm",
  "servo",
  "steering",
  "steering-crawler",
  "steering-quad-mechanum",
  "steering-quad-omni",
]
all-alloc = [
  "alloc-nostd",
  "controller",
  "encoder",
  "servo",
  "steering",
  "steering-crawler",
  "steering-quad-mechanum",
  "steering-quad-omni",
]
all-std = [
  "controller",
  "encoder",
  "servo",
  "std",
  "steering",
  "steering-crawler",
  "steering-quad-mechanum",
  "steering-quad-omni",
]
alloc = ["num/alloc"]
alloc-nostd = ["alloc", "num/libm"]
controller = []
default = ["num/libm"]
encoder = []
heapless = ["dep:heapless"]
log = ["dep:log"]
log_lvl_1 = ["log", "log/max_level_debug"]
log_lvl_2 = ["log", "log/max_level_trace"]
panic-handler = ["dep:panic-abort"]
servo = []
std = ["alloc", "log/std", "num/std"]
steering = []
steering-crawler = ["steering"]
steering-quad-mechanum = ["steering"]
steering-quad-omni = ["steering"]

[lib]
name = "robo"

[package]
authors = ["Sora Tonami <ms0503@outlook.com>"]
edition = "2021"
name = "librobo"
readme = "../README.md"
version = "0.4.0"
